<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="weatherInfoViewModel"
            type="com.example.feature_weatherinformation.presentation.weatherinfo.WeatherInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_palette"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary"
            android:paddingTop="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@+id/placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_weather_info_title"
            style="@style/TextAmperzand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_22ssp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_city"
            android:layout_width="280dp"
            android:layout_height="@dimen/_40sdp"
            android:inputType="textNoSuggestions"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/shape_rect_rounded_grey_stroke"
            android:gravity="center"
            android:hint="@string/city_hint"
            android:maxLength="@integer/max_city_length"
            android:maxLines="1"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:textColor="@color/black"
            style="@style/TextRobotoMedium"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_weather_info_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_fetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            style="@style/TextRobotoMedium_Small"
            android:textAllCaps="false"
            android:background="@drawable/shape_rect_circular_secondary_color"
            android:text="@string/fetch"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tie_city" />

        <View
            android:id="@id/placeholder"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_fetch"
            android:layout_marginTop="@dimen/_16sdp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_weather_info"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_palette"
            app:layout_constraintWidth_max="@dimen/_300sdp"
            tools:listitem="@layout/item_weather_info" />

        <TextView
            android:id="@+id/tv_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            android:textColor="@color/grey_700"
            app:layout_constraintTop_toBottomOf="@id/view_palette"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/TextRobotoBold_Small" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
